--- a/src/App.css
+++ b/src/App.css
@@ -1,103 +1,19 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6
-{ 
-  margin: 0;
-  padding-bottom: 10px;
-  color:white;
-}
-
-p {
-  margin: 0;
-  font-weight: 600;
-}
-
-ul,
-ol,
-li
-{
-  margin: 0;
-  padding: 0;
-  list-style-type:none;
-}
-
-
-
-a {
-  color: currentColor;
-  text-decoration: none;
-}
-
-button {
-  cursor: pointer;
-  
-}
-
-.buttonBox {
+.appContainer {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: start;
-  gap: 10px;
-} 
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+  flex-direction: column;
+  align-items: start;
+  width: 100;
+  text-align: left;
+  padding: 20px;
+  border: 2px solid #050000;
+  border-radius: 10px;
 }
 
-body {
- font-family: "Gilroy", sans-serif;
- background-color: #fbfbfb;
- color: rgba(12, 12, 12, 0.7);
- box-sizing: border-box;
+.title {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: start;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-
-.read-the-docs {
-  color: #888;
-}
-
-div {
-  padding-bottom: 20px;
+input {
+  outline: none;
 }
