--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,13 +1,13 @@
 .form {
-    display: flex;
-   background-color: #f5f5f5;
-   border: 1px solid #ccc;
-   border-radius: 4px;
+   display: flex;
    flex-direction: column;
-   gap: 2px;
-   margin-bottom: 15px;
-}
-
-.lastField{
+   margin-bottom: 20px;
+ }
+ 
+ label {
    margin-bottom: 10px;
-}
+ }
+ 
+ button {
+   margin-top: 10px;
+ }
